<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/text_header"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_about_alc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:onClick="loadAboutALC"
            android:text="@string/button_text_about_alc"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="@+id/text_header"
            app:layout_constraintStart_toStartOf="@+id/text_header"
            app:layout_constraintTop_toBottomOf="@+id/text_header" />

        <Button
            android:id="@+id/button_my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:onClick="loadMyProfile"
            android:text="@string/button_text_my_profile"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_about_alc"
            app:layout_constraintStart_toStartOf="@+id/button_about_alc"
            app:layout_constraintTop_toBottomOf="@+id/button_about_alc" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>